# Hardware_Tools

./: 0_pico.html  1_pico_c.html  README.md  camera.html  computer_build.html  drone_build.html  electrical_switch_components.html  electrical_tools.html  home_assistant.html  index.html  p_05_spec.html  pico.html  pyproject.toml  raspberry_pi_5.html  rgb_lighting_build.html  robots.txt  search.json  settings.ini  sitemap.xml  test.txt  text.txt
Embedded_Systems/: 0_esc.html  0_pico.html  1_esc_firmware.html  1_pico_c.html  cellular_iot.html  iotawatt.html  microcontrollers.html  raspberry_pi_5.html
Hardware_Tools/: _modidx.py
_proc/: 01_Electrical_Tools.html.md  01_Electrical_Tools.ipynb  02_Computer_Build.html.md  02_Computer_Build.ipynb  03_RGB_Lighting_Build.html.md  03_RGB_Lighting_Build.ipynb  05_Drone_Build.html.md  05_Drone_Build.ipynb  06_Home_Assistant.html.md  06_Home_Assistant.ipynb  07_Camera.ipynb  07_Raspberry_Pi_5.html.md  07_Raspberry_Pi_5.ipynb  08_Pico.html.md  08_Pico.ipynb  09_Electrical_Switch_Components.ipynb  _quarto.yml  index.ipynb  p_05_Spec.html.md  p_05_Spec.ipynb  sidebar.yml
_proc/Embedded_Systems/: 01_Raspberry_Pi_5.ipynb  02_0_Pico.ipynb  02_1_Pico_C.ipynb  03_IotaWatt.ipynb
_proc/_docs/: computer_build.html  pico.html  (+12 more)
nbs/: 01_Electrical_Tools.ipynb  02_Computer_Build.ipynb  03_RGB_Lighting_Build.ipynb  05_Drone_Build.ipynb  06_Home_Assistant.ipynb  07_Camera.ipynb  07_Raspberry_Pi_5.ipynb  08_0_Pico.ipynb  08_1_Pico_C.ipynb  08_Pico.ipynb  09_Electrical_Switch_Components.ipynb  _quarto.yml  index.ipynb  nbdev.yml  p_05_Spec.ipynb
(+11 files in other folders)
